# agentecs

./: .env.template  .envrc  .gitignore  .importlinter  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs.yml
api/: index.html
api/adapters/: index.html
api/core/: index.html
api/scheduling/: index.html
api/storage/: index.html
api/world/: index.html
archive/: ANALYSIS_SCHEDULING.md
cookbook/: index.html
docs/: index.md
docs/api/: adapters.md  core.md  index.md  scheduling.md  storage.md  world.md
docs/cookbook/: index.md
docs/start-up/: core-concepts.md  first-steps.md  installation.md
docs/system/: architecture.md  components.md  design-philosophy.md  development-architecture.md  index.md  queries.md  roadmap.md  scheduling.md  storage.md  systems.md  world_management.md
docs/viz/: architecture.md  cli.md  extending.md  index.md
examples/: __init__.py  components.py  readme_example.py  simple_agents.py
examples/task_dispatch/: .env.example  README.md  __init__.py  components.py  interactive_demo.ipynb  llm_utils.py  systems.py
examples/task_dispatch_app/: .env.example  README.md  __init__.py  components.py  llm_utils.py  main.py  models.py  requirements.txt  world.py
scripts/: bootstrap.sh  setup-dev.sh
search/: search_index.json
src/agentecs/: __init__.py
src/agentecs/_rust/: __init__.py
src/agentecs/adapters/: __init__.py  chroma.py  instructor.py  models.py  protocol.py
src/agentecs/config/: __init__.py  settings.py
src/agentecs/core/: __init__.py  types.py
src/agentecs/scheduling/: __init__.py  merge_strategies.py  models.py  scheduler.py
src/agentecs/world/: access.py  (+4 more)
start-up/core-concepts/: index.html
start-up/first-steps/: index.html
start-up/installation/: index.html
system/: index.html
system/architecture/: index.html
system/components/: index.html
system/design-philosophy/: index.html
system/development-architecture/: index.html
system/queries/: index.html
system/roadmap/: index.html
system/scheduling/: index.html
system/storage/: index.html
system/systems/: index.html
system/world_management/: index.html
tests/: conftest.py
tests/adapters/: __init__.py  test_chroma.py  test_instructor.py
tests/core/: test_component.py  test_identity.py  test_query.py
tests/integration/: test_basic_workflow.py  test_shared_wrapper_journeys.py
tests/scheduling/: test_scheduler.py
tests/storage/: test_local_storage.py
tests/tracing/: __init__.py  test_models.py  test_protocol.py
tests/world/: test_access.py  test_entity_handle.py  test_merge_split.py  test_result.py
viz/: index.html
viz/architecture/: index.html
viz/cli/: index.html
viz/extending/: index.html
(+26 files in other folders)
